# qs_leptos

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  justfile  rustfmt.toml
crates/site-app/: Cargo.toml
crates/site-app/src/: lib.rs
crates/site-app/style/tailwind/: package.json  tailwind.config.js
crates/site-frontend/: Cargo.toml
crates/site-frontend/src/: lib.rs
crates/site-server/: Cargo.toml
crates/site-server/src/: fileserv.rs  main.rs
nix/: cargo-leptos.nix  style-js-deps.nix
